@@ -1,5 +1,10 @@
 2007-10-11  Daniel Macks  <dmacks@netspace.org>
 
+	* SelfUpdate/CVS.pm: Use link() instead of system(ln) to avoid
+	shell metachar problems.
+
+2007-10-11  Daniel Macks  <dmacks@netspace.org>
+
 	* Validator.pm: More explicit error message when .deb shlibs can't
 	be read. Set failure if bad private Shlibs syntax. Require
 	BD:fink>=0.27.99 if using private Shlibs syntax.
